--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-os
-json
-datetime
-requests>=2.28.0
-pydantic-settings>=2.0.0
+﻿annotated-types==0.7.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+idna==3.11
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+python-dotenv==1.2.1
+requests==2.32.5
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
